# SFML_CMake_Setup

./: .gitmodules  CMakeLists.txt  Readme.md
src/: main.cpp
